--- a/views/register.ejs
+++ b/views/register.ejs
@@ -20,39 +20,59 @@
             <div class="w-full max-w-xl p-8">
                 <h2 class="mb-6 text-3xl font-bold font-raleway">Register</h2>
                 <form method="POST" action="/register">
-                                                                            <div
-                                                                                class="px-3 py-8 font-semibold rounded custom-btn">
-                                                                                <div class="mb-4">
-                                                                                    <label for="username"
-                                                                                        class="block mb-2 font-semibold text-black">Username</label>
-                                                                                    <input type="text" id="username"
-                                                                                        name="username"
-                                                                                        class="w-full px-4 py-2 border border-gray-300 rounded"
-                                                                                        placeholder="Insert username"
-                                                                                        required>
-                                                                                    <% if (UsernameAvailability==false) { %>
-                                                                                    <p>Username is already taken.</p>
-                                                                                    <% } %>
-                                                                                    <% if (usernameRegexAllowed==false) { %>
-                                                                                        <p>consist of 8 to 30 characters, including uppercase and lowercase
-                                                                                            letters, numbers, underscores, and hyphens..</p>
-                                                                                        <% } %>
-                                                                                </div>
+                     <div
+                        class="px-3 py-8 font-semibold rounded custom-btn">
+                            <div class="mb-4">
+                                <label for="username"
+                                class="block mb-2 font-semibold text-black">Username</label>
+                                <input type="text" id="username"
+                                name="username"
+                                class="w-full px-4 py-2 border border-gray-300 rounded mb-2"
+                                placeholder="Insert username"
+                                required>
+                                 <% if (UsernameAvailability==false) { %>
+                                <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
+                                    <strong class="font-bold">Username already taken</strong>
+                                    <span class="absolute top-0 bottom-0 right-0 px-4 py-3">
+                                      <svg class="fill-current h-6 w-6 text-red-500" role="button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><title>Close</title><path d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z"/></svg>
+                                    </span>
+                                  </div>
+                                <% } %>
+                                <% if (usernameRegexAllowed==false) { %>
+                                    <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
+                                        <strong class="font-bold">consist of 8 to 30 characters, including uppercase and lowercase
+                                            letters, numbers, underscores, and hyphens..</strong>                                    
+                                        <span class="absolute top-0 bottom-0 right-0 px-4 py-3">
+                                          <svg class="fill-current h-6 w-6 text-red-500" role="button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><title>Close</title><path d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z"/></svg>
+                                        </span>
+                                      </div>
+                                <% } %>
+                                </div>
                                                                                 <div class="mb-4">
                                                                                     <label for="email"
                                                                                         class="block mb-2 font-semibold text-black">Email</label>
                                                                                     <input type="email" id="email"
                                                                                         name="email"
-                                                                                        class="w-full px-4 py-2 border border-gray-300 rounded"
+                                                                                        class=" mb-2 w-full px-4 py-2 border border-gray-300 rounded"
                                                                                         placeholder="example@email.com"
                                                                                         required>
-                                                                                        <% if (PhoneNumberAvailability==false) { %>
-                                                                                            <p>Phone number is already taken.</p>
-                                                                                        <% } %>
                                                                                         <% if (emailRegexAllowed==false) { %>
-                                                                                            <p>Ensures that the email address contains a username part,
-                                                                                            followed by the "@" symbol, a domain part, and a valid
-                                                                                            top-level domain.</p>
+                                                                                        <div class="mb-2 bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
+                                                                                            <strong class="font-bold">Ensures that the email address contains a username part,
+                                                                                                followed by the "@" symbol, a domain part, and a valid
+                                                                                                top-level domain.</strong>
+                                                                                            <span class="absolute top-0 bottom-0 right-0 px-4 py-3">
+                                                                                              <svg class="fill-current h-6 w-6 text-red-500" role="button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><title>Close</title><path d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z"/></svg>
+                                                                                            </span>
+                                                                                        </div>
+                                                                                        <% } %>
+                                                                                        <% if ( EmailAvailability==false) { %>
+                                                                                          <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
+                                                                                            <strong class="font-bold">Email is already taken</strong>
+                                                                                            <span class="absolute top-0 bottom-0 right-0 px-4 py-3">
+                                                                                              <svg class="fill-current h-6 w-6 text-red-500" role="button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><title>Close</title><path d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z"/></svg>
+                                                                                            </span>
+                                                                                          </div>
                                                                                         <% } %>
                                                                                 </div>
                                                                                 <div class="grid grid-cols-2 gap-4">
@@ -62,18 +82,20 @@
                                                                                         <input type="password"
                                                                                             id="password"
                                                                                             name="password"
-                                                                                            class="w-full px-4 py-2 border border-gray-300 rounded"
+                                                                                            class=" mb-2 w-full px-4 py-2 border border-gray-300 rounded"
                                                                                             placeholder="Insert password"
                                                                                             required>
-                                                                                        <% if ( EmailAvailability==false) { %>
-                                                                                            <p>Email is already taken.</p>
-                                                                                            <% } %>
                                                                                             <% if (passwordRegexAllowed==false) { %>
-                                                                                                <p>At least one lowercase letter, at least one
-                                                                                                uppercase letter, at least one digit, matches
-                                                                                                any combination of alphanumeric characters and
-                                                                                                special characters (non-whitespace) with a
-                                                                                                minimum length of 8.</p>
+                                                                                                <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
+                                                                                                    <strong class="font-bold">At least one lowercase letter, at least one
+                                                                                                        uppercase letter, at least one digit, matches
+                                                                                                        any combination of alphanumeric characters and
+                                                                                                        special characters (non-whitespace) with a
+                                                                                                        minimum length of 8.</strong>
+                                                                                                    <span class="absolute top-0 bottom-0 right-0 px-4 py-3">
+                                                                                                      <svg class="fill-current h-6 w-6 text-red-500" role="button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><title>Close</title><path d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z"/></svg>
+                                                                                                    </span>
+                                                                                                  </div>
                                                                                                 <% } %>
                                                                                     </div>
                                                                                     <div class="mb-4">
@@ -120,6 +142,14 @@
                                                                                         class="w-full px-4 py-2 border border-gray-300 rounded"
                                                                                         placeholder="08xxxxxxxxxx"
                                                                                         required>
+                                                                                        <% if (PhoneNumberAvailability==false) { %>
+                                                                                            <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
+                                                                                                <strong class="font-bold">Phone number is already taken.</strong>
+                                                                                                <span class="absolute top-0 bottom-0 right-0 px-4 py-3">
+                                                                                                  <svg class="fill-current h-6 w-6 text-red-500" role="button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><title>Close</title><path d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z"/></svg>
+                                                                                                </span>
+                                                                                              </div>
+                                                                                        <% } %>
                                                                                 </div>
                                                                                 <div class="text-right">
                                                                                     <button type="submit"
