admin update - add navbar base style

--- a/views/admin-movies.ejs
+++ b/views/admin-movies.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Movies List</title>
+  <title>Admin | Movies</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/styles/fe_style.css">
   <link rel="stylesheet" href="/styles/style.css">
