--- a/views/register.ejs
+++ b/views/register.ejs
@@ -163,5 +163,18 @@
         </div>
     </div>
 </body>
-
 </html>
+
+<script>
+    function comparePasswords() {
+        var password = document.getElementById("password").value;
+        var confirmPassword = document.getElementById("confirmPassword").value;
+
+        if (password !== confirmPassword) {
+            alert("Passwords do not match.");
+            return false; // Prevent form submission
+        }
+        
+        return true; // Allow form submission
+    }
+</script>
